src/objects/IMS_Legal_Entity__c.object
<CustomObject>
    <description>Created By TPA Module Under TPA-FEATURE-5</description>
    <fields>
        <fullName>IMS_Entity_Address__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>IMS Entity Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IMS_Master_Legal_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>IMS Master Legal Entity</label>
        <referenceTo>IMS_Master_Legal_Entity__c</referenceTo>
        <relationshipLabel>IMS Legal Entities</relationshipLabel>
        <relationshipName>IMS_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Ambulatory_EMR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Ambulatory EMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_GermanRussian_ChannelDynamic_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if German or Russian Channel Dynamics offerings are selected. Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is GermanRussian ChannelDynamic Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Glbl_ChnlDynmics_PromoTrack_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if Global channel dynamics or Global promo track offerings are selected. Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Glbl ChnlDynmics_PromoTrack Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Glbl_PromoTrack_Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Glbl PromoTrack Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Health_Plan_Claims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Health Plan Claims</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_MedPages_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For any MedPages Data Offering</description>
        <label>Is MedPages Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Oncology_EMR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-2675</description>
        <label>Is Oncology EMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Data_Assets_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Primary Data Assets Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Secondary_Data_Assets_Present__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Is Secondary Data Assets Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Unique id used for migrating Account records from external systems (e.g. during acquisition loads)</inlineHelpText>
        <label>Legacy Id</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legal_Entity_Mapped_To__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IMS_Master_Legal_Entity__r.Legal_Entity_Mapped_To__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Mapped To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Name_for_TLLA__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Legal Entity Name for TLLA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legal_Entity_Title__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IMS_Master_Legal_Entity__r.Legal_Entity_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Legal Entity Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_of_Governing_Law__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>Location of Governing Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_for_ESign__c</fullName>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <formula>IMS_Master_Legal_Entity__r.Name_for_ESign__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name for ESign</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TPA_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TPA Request</label>
        <referenceTo>TPA_Request__c</referenceTo>
        <relationshipLabel>IMS Legal Entities</relationshipLabel>
        <relationshipName>IMS_Legal_Entities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>containUS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>containUS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDDDOffering__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>isDDDOffering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_AIM_XR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is AIM XR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Additional_Terms__c</fullName>
        <formula>OR( is_Canada__c ,is_Managed_Workbook__c , is_Midas__c , is_Promotrak__c,isDDDOffering__c,is_Xponent__c, AND(IF( (TEXT( TPA_Request__r.AMA_USPrescriberData__c )=&apos;Yes&apos;) , true, false), containUS__c ) , TPA_Request__r.Is_Vendor_Name_Contains_Veeva__c , TPA_Request__r.Is_Vendor_Name_Contains_DeepIntent__c , TPA_Request__r.Is_Vendor_Related_to_Source_Symphony_Acc__c , Is_GermanRussian_ChannelDynamic_Selected__c , Is_Glbl_ChnlDynmics_PromoTrack_Selected__c, Is_Ambulatory_EMR__c, Is_Health_Plan_Claims__c, is_GE_Centricity_EMR__c)</formula>
        <label>is Additional Terms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Analytics_Link__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Analytics Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Canada__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Canada</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_GE_Centricity_EMR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is GE Centricity EMR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_LAAD_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is LAAD Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Managed_Workbook__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Managed Workbook</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Midas__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Midas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Patient_Companion_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Patient Companion File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Patient_Reference_File__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Patient Reference File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Payer_Companion_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Payer Companion File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Promotrak__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Promotrak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Provider_Companion_File__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Provider Companion File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_South_Africa_Consumer_Health__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for South Africa Consumer Health</description>
        <label>is South Africa Consumer Health</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Xponent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created By TPA Module Under TPA-FEATURE-5</description>
        <label>is Xponent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Xponent_or_OneKey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>TPA-MC-ESPSFDCTPA-1215</description>
        <label>is Xponent or OneKey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>show_offering_specific_terms__c</fullName>
        <formula>TPA_Request__r.Is_South_Africa_Sub_Off__c || is_South_Africa_Consumer_Health__c || is_LAAD_Offering__c || TPA_Request__r.is_Specific_Vendors_APLD_Off__c || TPA_Request__r.is_Specific_Vendors_Long_Prescr_Data__c || TPA_Request__r.is_Specific_Vendors_Medical_Claims_Data__c || (IF( (ISPICKVAL(TPA_Request__r.AMA_USPrescriberData__c, &quot;Yes&quot;) &amp;&amp; containUS__c), true, false)) || is_GE_Centricity_EMR__c || is_Managed_Workbook__c || isDDDOffering__c || is_Xponent__c || is_Midas__c || Is_Ambulatory_EMR__c || Is_Oncology_EMR__c || Is_Health_Plan_Claims__c || is_Patient_Companion_File__c || is_Payer_Companion_File__c || is_Provider_Companion_File__c || Is_MedPages_Data__c || is_AIM_XR__c || is_Analytics_Link__c || TPA_Request__r.is_Specific_Vendors_LAAD_Off__c || TPA_Request__r.Is_Vendor_Name_Contains_MedPro__c || is_Xponent_or_OneKey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>show offering specific terms</label>
        <type>Checkbox</type>
    </fields>
    <label>IMS Legal Entity</label>
    <nameField>
        <label>IMS Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IMS Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>